--- a/store/templates/store/store-list.html
+++ b/store/templates/store/store-list.html
@@ -1,3 +1,4 @@
+<!-- This recieves the content of the load_stores views of the store app and then renders its content (stores) in the stores.html -->
 {% if stores %}
 <h1>Stores in {{ place }}</h1>
 {% for store in stores %}
