seperated api and web into different projects

--- a/store/templates/store/delete-product.html
+++ b/store/templates/store/delete-product.html
@@ -14,3 +14,8 @@
 
 </div>
 {% endblock %}
+
+
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, optio, ex nulla labore ipsa tempore at error corrupti nesciunt ad aspernatur veritatis sint. Aut officiis ut commodi, odio quae dignissimos.
+Sapiente fuga, iusto voluptas officia architecto nihil inventore qui quia? Corporis accusamus sapiente iusto molestias, a aliquam, obcaecati vero nam adipisci non, placeat optio numquam alias nemo provident? Minima, esse.
