--- a/user/templates/user/vendor-request.html
+++ b/user/templates/user/vendor-request.html
@@ -47,6 +47,9 @@
     After the seventh day, onward, you will need to make a monthly subscription</li>
   <li>Incase of inactive subscription, the visibility of your products will be revoked and you store will have the <span>Inactive</span> tag till
     after acrivation</li>
+  <li>
+    <span class="font-bold">As a Vendor, Please you should include institution in your profile info if you have not done so!!!</span>
+  </li>
 </ol>
 <p>By signing up as a vendor on our site, you acknowledge that you have read and agree to these terms of service. If you do not agree to these terms,
   you may not use our site as a vendor.</p>
