redesign and restructure

--- a/base/templates/base/navbar.html
+++ b/base/templates/base/navbar.html
@@ -10,6 +10,9 @@
     </div>
 
     <div>
+
+
+      
       <button class="relative menu-toggle-icon z-10" id="menu-toggle-icon">
         <i class="fa-solid fa-bars open-menu-icon toggle" id="open-menu"></i>
         <i class="fa-solid fa-xmark close-menu-icon toggle" id="close-menu"></i>
@@ -17,7 +20,7 @@
     </div>
   </div>
 
-  <div id="aside" class="aside bg-gray-100 fixed h-full hidden leading-10 p-10 w-full z-50">
+  <div id="aside" class="aside bg-gray-50 fixed h-full hidden leading-10 p-10 w-full z-50 text-sm md:text-lg">
     <div>
       <a href="{% url 'store:list_stores' %}">Store</a>
     </div>
