--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous"
     referrerpolicy="no-referrer" />
   <link rel="shortcut icon" href="{% static 'images/icon.ico' %}" type="image/x-icon">
   {% tailwind_css %}
@@ -30,13 +30,16 @@
     {% endfor %}
   </ul>
   {% endif %}
+  {% if request.path == "/" or request.path == "/store/" or request.path == "/search/" %}
+  {% include 'base/location-navbar.html' %}
+  {% else %}
   {% include 'base/navbar.html' %}
-
+  {% endif %}
   <div class="px-4 min-h-screen md:w-5/6 md:m-auto">
     {% block content %}
     {% endblock %}
   </div>
-  
+
   <!-- FOOTER -->
   {% if store or more_items %}
   {% include 'base/store-footer.html' %}
@@ -45,7 +48,9 @@
   {% endif %}
 
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="{% static 'js/script.js' %}"></script>
+
 {% block script %}
 {% endblock %}
 
