--- a/base/templates/base/store-footer.html
+++ b/base/templates/base/store-footer.html
@@ -1,7 +1,7 @@
 {% if store %}
-<footer class="mt-4 py-3 bg-gray-200">
+<footer class="mt-4 py-3 bg-gray-100 text-xs md:text-sm"> 
   <section class="">
-    <div class="flex gap-3 justify-between p-3">
+    <div class="flex gap-4 justify-between p-2">
       <div>{{ store }} </div>
       <div>{{ store.store_address }}</div>
     </div>
@@ -14,7 +14,7 @@
       <a href="{{ store.tiktok }}"><i class="fa-brands fa-tiktok"></i></a>
       {% endif %}
       {% if store.twitter %}
-      <a href="{{ store.twitter }}"><i class="fa-brands fa-twitter"></i></a>
+      <a href="{{ store.twitter }}"><i class="fa-brands fa-x-twitter"></i></a>
       {% endif %}
       {% if store.website %}
       <a href="{{ store.website }}"><i class="fa-solid fa-globe"></i></a>
