--- a/user/templates/user/vendor.html
+++ b/user/templates/user/vendor.html
@@ -12,7 +12,7 @@
     <span><i class="fa-solid fa-circle text-green-500"></i> <span>Active</span></span>
     {% else %}
     <div><i class="fa-solid fa-circle text-red-500"></i> <span>Inactive</span>
-      <a href="{% url 'activate_subscription' %}">Activate Subscription</a>
+      <a class="link" href="{% url 'activate_subscription' %}">Activate Subscription</a>
     </div>
     {% endif %}
   </div>
