--- a/base/templates/home/on-filter-load.html
+++ b/base/templates/home/on-filter-load.html
@@ -41,7 +41,7 @@
         </div>
       </a>
       <small>
-        <a href="{% url 'store:detail_store' store_name=good.store.store_name %}">{{ good.store.store_name }}</a>
+        <a class="link" href="{% url 'store:detail_store' store_name=good.store.store_name %}">{{ good.store.store_name }}</a>
       </small>
     </div>
     {% endfor %}
