--- a/store/templates/store/add-product.html
+++ b/store/templates/store/add-product.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="font-bold   text-2xl">Add Product</h1>
+<h1 class="font-bold text-2xl">Add Product</h1>
   <div>
-    <form action="" id="add-product-form" enctype="multipart/form-data" method="post">
+    <form action="" id="product-form" enctype="multipart/form-data" method="post">
       {% csrf_token %}
       {{ form.as_p }}
       <small class="text-red-500">Maximum of <b> {{ max }}</b> Images</small>
@@ -15,4 +15,10 @@
       <input type="submit" name="submit" id="submit">
     </form>
   </div>
+{% endblock %}
+
+{% block script %}
+<script>
+  let subcategory_url = "{% url 'store:load_subcategory' %}"
+</script>
 {% endblock %}
