--- a/store/templates/store/create-store.html
+++ b/store/templates/store/create-store.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div>
   <h1 class="text-center text-2xl">Store Profile</h1>
-  <form action="" enctype="multipart/form-data" method="POST" id="data-form" data-url="{% url 'store:load_data' %}">
+  <form action="" enctype="multipart/form-data" method="POST" id="data-form" data-url="{% url 'load_data' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" name="submit" id="submit">
