--- a/store/templates/store/edit-product.html
+++ b/store/templates/store/edit-product.html
@@ -8,7 +8,7 @@
 {% block content %}
 <h1 class="font-bold text-2xl">Edit Product</h1>
 
-<form method="post" enctype="multipart/form-data">
+<form method="post" id="product-form"  enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   {% if product_images.forms %}  
@@ -25,4 +25,9 @@
   <input type="submit" name="submit" id="submit">
 </form>
 
+{% endblock %}
+{% block script %}
+<script>
+  let subcategory_url = "{% url 'store:load_subcategory' %}"
+</script>
 {% endblock %}
