--- a/store/templates/store/store-list.html
+++ b/store/templates/store/store-list.html
@@ -1,17 +1,21 @@
 <!-- This recieves the content of the load_stores views of the store app and then renders its content (stores) in the stores.html -->
 {% if stores %}
-<h1>Stores in {{ place }}</h1>
-{% for store in stores %}
-<div>
-  <a href="{% url 'store:detail_store' store_name=store.store_name %}">
-    <div>
-      <img src="{{ store.store_logo.url }}" alt="{{ store.store_name }}" width="200">
-    </div>
-    <h3>{{ store.store_name }}</h3>
-    <div>{{ store.store_motto }}</div>
-  </a>
+<h1 class="py-2 text-center">Stores in {{ place }}</h1>
+<div id="store-list" class="flex gap-1 flex-wrap m-auto pt-1 w-11/12">
+  {% for store in stores %}
+  <div>
+    <a href="{% url 'store:detail_store' store_name=store.store_name %}" class="flex flex-col justify-between">
+      <div class="w-32 h-32">
+        <img src="{{ store.store_logo.url }}" alt="{{ store.store_name }}">
+      </div>
+      <div>
+        <h3 class="text-center">{{ store.store_name }}</h3>
+        <div class="text-sm">{{ store.store_motto|truncatechars:20 }}</div>
+      </div>
+    </a>
+  </div>
+  {% endfor %}
 </div>
-{% endfor %}
 {% else %}
 <h1>There are currently no Stores Here</h1>
 {% endif %}
