--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -8,46 +8,10 @@
 {% block content %}
 <div class="form-container">
   <h1 class="font-bold text-center text-2xl">Profile</h1>
-  <form class="form-class" method="POST" action="" enctype="multipart/form-data" id="data-form" data-url="{% url 'store:load_data' %}">
+  <form class="form-class" method="POST" action="" enctype="multipart/form-data" id="data-form" data-url="{% url 'load_data' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" name="submit" value="Submit" id="submit" class="bg-red-500">
   </form>
 </div>
-{% endblock %}
-{% block script %}
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script>
-
-  $('#id_state').change(function () {
-    let url = $("#data-form").attr("data-url");
-    let state = $(this).val();
-    $.ajax({
-      url: url,
-      data: {
-        'state': state
-      },
-      success: function (data) {
-        $("#id_location").html(data);
-        $("#id_institution").html('<option value="">---------</option>');
-      }
-    })
-  })
-
-  $("#id_location").change(function () {
-    let url = $("#data-form").attr("data-url");
-    let location = $(this).val();
-    $.ajax({
-      url: url,
-      data: {
-        'location': location
-      }, success: function (data) {
-        $("#id_institution").html(data)
-      }
-    })
-  })
-
-
-</script>
-
 {% endblock %}
